k3s/apps/linkding/statefulset.yaml
## linkding deployment (can also use a stateful set)

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkding
  namespace: apps
  labels:
    source: community
    app: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      nodeSelector:
        kubernetes.io/hostname: dexy
      containers:
      - name: linkding
        image: sissbruecker/linkding:latest
        ports:
        - containerPort: 9090
        volumeMounts:
          - name: linkding
            mountPath: /etc/linkding/data   # where the data is stored in the pod
      volumes:
        - name: linkding
          persistentVolumeClaim:
            claimName: pvc-linkding
