k3s/apps/linkding/ingress.yaml
## linkding ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-linkding
  namespace: apps
  annotations:
    ingressClassName: traefik
spec:
  rules:
    - host: linkding.kunalvirwal.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-linkding
                port:
                  number: 80
